# ibkr-portfolio-builder-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scan-parameters.xml  scanner_params.json  scanner_reference.json  server.json
.github/workflows/: ci.yml  docker.yml  publish-mcp.yml
scripts/: build_catalog.py
src/connector/: auth.py  catalog.py  ibkr.py  screener.py  server.py  settings.py  tools.py
src/connector/data/: filter_catalog.json  scan_catalog.json
