[project]
name = "claude-custom-connector"
version = "0.1.0"
description = "Test/template remote MCP server for Claude.ai custom connectors (FastMCP + self-hosted OAuth)."
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.1",
    "ib-async>=2.1.0",
    "itsdangerous>=2.2.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connector"]
